# shiki

./: .gitmodules  CMakeLists.txt  README.md
cmake/: compilers.cmake  coverage.cmake  parse_revision.cmake
doc/: CMakeLists.txt  Doxyfile.in  main.md
include/shiki/: arity.hpp  as_expr.hpp  as_node.hpp  as_terminal.hpp  expr.hpp  is_expr.hpp  is_terminal.hpp  make_expr.hpp  shiki.hpp  tag_of.hpp  terminal.hpp  transform.hpp  value.hpp
include/shiki/detail/: get.hpp  ignore.hpp
include/shiki/support/: terminal.hpp
test/: CMakeLists.txt  arity.cpp  as_expr.cpp  eval.cpp  is_expr.cpp  is_terminal.cpp  make_expr.cpp  nstest.hpp  tag_of.cpp  test.cpp  value.cpp
